--- a/index.html
+++ b/index.html
@@ -5,3 +5,24 @@
   <title>Hero banner</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+</head>
+<body>
+
+<div class="banner">
+  <img class="img-flex">
+  <div class="banner-content">
+    <div>
+      <img>
+    </div>
+    <div>
+      <h2>
+      <p>
+      <a class="btn btn-big" href="#">Join USFF</a>
+    </div>
+    </div>
+    </div>
+
+</body>
+</html>
