--- a/index.html
+++ b/index.html
@@ -5,24 +5,23 @@
   <title>Hero banner</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet">
 </head>
 <body>
 
-<div class="banner">
-  <img class="img-flex">
-  <div class="banner-content">
-    <div>
-      <img>
+  <div class="banner">
+    <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
+    <div class="banner-content">
+      <div class="mecha">
+        <img src="images/mecha.svg" alt="">
+      </div>
+      <div class="text">
+        <h2>Ultra Super Fighting Force</h2>
+        <p>Control giant, fighting, transforming robots and save the world!</p>
+        <a class="btn btn-big" href="#">Join USFF</a>
+      </div>
     </div>
-    <div>
-      <h2>
-      <p>
-      <a class="btn btn-big" href="#">Join USFF</a>
-    </div>
-    </div>
-    </div>
+  </div>
 
 </body>
 </html>
