--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Hero banner</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,700" rel="stylesheet">
 </head>
 <body>
 
@@ -13,7 +13,7 @@
     <img class="img-flex" src="images/placeholder-16by9.svg" alt="">
     <div class="banner-content">
       <div class="mecha">
-        <img src="images/mecha.svg" alt="">
+        <img class="img-flex" src="images/mecha.svg" alt="">
       </div>
       <div class="text">
         <h2>Ultra Super Fighting Force</h2>
